# MTUCI_ml

./: .gitignore  Lab3.ipynb  ds.py  lab1.ipynb  pyproject.toml
lab1/: lab1.ipynb  lab1.pth
lab2/: lab2.ipynb
lab3/: lab3.ipynb
lab4/: lab4.ipynb
